# LinuxPraxis

./: README.md
Yves/Praktikum1/Task1/: arguments.sh  arrays.sh  calc.sh  hello_world.sh  loops.sh  variables.sh
Yves/Praktikum1/Task2/: example.conf  get_usernames.sh  update_users.sh
Yves/Praktikum2/Task1/: Makefile  hello.cpp
Yves/Praktikum2/Task2/: linux-25.bib  linux-25.tex
Yves/Praktikum3/: CMakeLists.txt  hello_world
Yves/Praktikum3/include/: MyLibrary.h
Yves/Praktikum3/src/: MyLibrary.cpp  hello_world.cpp
prac1/: arrays.sh  calc.sh  calculator.sh  graber.sh  hello_world.sh  index.html  sort.bash  sort.sh  variables.sh
prac2/Task1/: Makefile  hello.cpp  main  main.cpp
prac2/Task2/: Makefile  linux-25.bib  linux-25.tex
